1-3-2023
--------
- added major US holidays to the calendar

1-2-2023
--------
- activeFilters are now persistent across page loads using localStorage

1-1-2023
--------
- events shown on calendar will now only display if they have an active filter

12-28-2022
----------
- created common/accordionHeader/AccordionHeader instead of using two different accordions for customCalendars and defaultCalendars
