@@ -1,3 +1,7 @@
+1-5-2023
+--------
+- user can now edit events from any calendar type
+
 1-3-2023
 --------
 - added major US holidays to the calendar
